fix horizontal scroll issue

--- a/source/sass/_patterns.sass
+++ b/source/sass/_patterns.sass
@@ -5,6 +5,10 @@
 .align-right
   text-align: right
 
+body
+  max-width: 100%
+  overflow-x: hidden
+
 ul, ol
   margin-left: rem-calc(30)
   > li
